RESOLVED FIXED288140
Notification observer is not being removed
https://bugs.webkit.org/show_bug.cgi?id=288140
Summary Notification observer is not being removed
Per Arne Vollan
Reported 2025-02-20 13:22:49 PST
Notification observer is not being removed in WebProcessPool.
Attachments
Per Arne Vollan
Comment 1 2025-02-20 13:22:50 PST
Per Arne Vollan
Comment 2 2025-02-20 13:25:16 PST
EWS
Comment 3 2025-02-21 20:30:12 PST
Committed 290852@main (cd1c41746636): <https://commits.webkit.org/290852@main> Reviewed commits have been landed. Closing PR #41001 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.