Notification observer is not being removed https://bugs.webkit.org/show_bug.cgi?id=288140 rdar://145054761

Reviewed by Chris Dumez.

Notification observer is not being removed in WebProcessPool. This can cause crashes if
the notification is being posted after the WebProcessPool has been destroyed.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::unregisterNotificationObservers):

Canonical link: https://commits.webkit.org/290852@main